--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,1 +1,7 @@
 <h1><%= @project[:title] %></h1>
+<div>
+	<ul>
+		<li>Goal - <%= @project[:goal] %></li>
+		<li>Description - <%= @project[:description] %></li>
+	</ul>
+</div>
