--- a/app/views/layouts/_nav-bar.html.erb
+++ b/app/views/layouts/_nav-bar.html.erb
@@ -16,7 +16,7 @@
            <li> <%= link_to "Logout", logout_path %></li>
             <% else %>
            <li> <%= link_to "Sign Up", signup_path %> </li>
-           <li> <%= link_to "log in", login_path %></li>
+           <li> <%= link_to "Log in", login_path %></li>
           <% end %>
         </ul>
       </div>
