--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+   <div class="container">
 <%= render 'layouts/nav-bar' %>
     <% if flash[:notice] %>
       <div class="alert alert-block">
